# wilmor-minimal

./: demo.py  pyproject.toml  readme.md  requirements.txt
wilor_minimal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
