[project]
name = "wilor-minimal"
version = "0.1.0"
description = "Minimal WiLoR demo"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "numpy",
    "dill",
    "wilor-mini @ git+https://github.com/warmshao/WiLoR-mini",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
